# drone-lab-connector

src/drone_lab_connector/: CMakeLists.txt  package.xml
src/drone_lab_connector/config/: default_config.yaml
src/drone_lab_connector/include/drone_lab_connector/: config_manager.hpp  main_window.hpp  safety_node.hpp
src/drone_lab_connector/src/: config_manager.cpp  main.cpp  main_window.cpp  safety_node.cpp
src/drone_lab_fencer/: CMakeLists.txt  README.md  package.xml
src/drone_lab_fencer/config/: fence_params.yaml
src/drone_lab_fencer/launch/: lab_bringup.launch
src/drone_lab_fencer/src/: safety_fencer.cpp  takeoff_service.cpp
src/drone_lab_sim/: CMakeLists.txt  package.xml
src/drone_lab_sim/config/: sim_params.yaml
src/drone_lab_sim/launch/: sim_test.launch
src/drone_lab_sim/src/: fake_drone.cpp  student_cmd.cpp
src/drone_wrapper_pkg/: README.md  package.xml  setup.cfg  setup.py
src/drone_wrapper_pkg/config/: boundaries.yaml  domain_bridge_services.yaml  domain_bridge_topics.yaml  domain_bridge_topics_0_to_11.yaml
src/drone_wrapper_pkg/drone_wrapper_pkg/: arming_node.py  validation_node.py
src/drone_wrapper_pkg/launch/: drone_wrapper.launch.py
