<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_lab_sim</name>
  <version>1.0.0</version>
  <description>
    Lightweight fake-drone simulator for testing drone_lab_fencer without
    real hardware.  Mimics MAVROS topics and services for up to 10 drones.
  </description>

  <maintainer email="lab@university.edu">Lab Admin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
